# coffeespace-take-home

./: CLAUDE.md  README.md  pyproject.toml  view-data.py
.claude/: settings.local.json
docs/: session-knowledge-transfer.md
docs/data-high-level/: data-discovery.md
docs/decisions/: decision-log.md
docs/part-1-data-profiling/: data-profiling-report.md  profiles-raw.json  source-1.json  source-2.json
docs/part-2-canonical-schema/: example-merged-record.json  field-rationale.md  schema.json  schema.sql
docs/part-3-merge-logic/: dedup-rules.md  dirty-field-handling.md
docs/part-5/: part-5-writeup.md
scripts/: load_source_2.sh  load_source_2_streaming.py  part3_pipeline.py  profile_sources.py
scripts/sql/: 01_create_external_tables.sql  02_validate_sources.sql  03_staging_source_1.sql  04_staging_source_2.sql  05_merge_canonical.sql  06_derived_fields.sql  07_firestore_export_view.sql
